--- a/styles/base.scss
+++ b/styles/base.scss
@@ -2117,6 +2117,33 @@ i.file {
           }
         }
       }
+
+      .notifications-wrapper & {
+
+        td {
+          border-color: #dee2e6 !important;
+          background-color: #edeef2 !important;
+          vertical-align: middle !important;
+          color: #20273a !important;
+        }
+
+        &:first-child:last-child td.not-found {
+          padding: 55px 10px 28px !important;
+          background: #fff url('/static/not-found.svg') 50% 28px no-repeat !important;
+          font-size: 14px;
+          font-weight: 400;
+          color: #848893 !important;
+          line-height: 17px !important;
+        }
+
+        &.selected {
+
+          td {
+            border-color: #2599d5 !important;
+            background-color: #e8f7ff !important;
+          }
+        }
+      }
     }
 
     tr.group-row {
