DT-315 - Login Page + Reset/Set Password pages (partially applied also on other unauthorized pages)

--- a/styles/base.scss
+++ b/styles/base.scss
@@ -885,11 +885,11 @@ h3.ui.header {
 .ui.page .field.error select,
 .ui.page .field.error textarea,
 .ui.page .field.error .ui.dropdown {
-  border-color: #e0b4b4 !important;
-  background: #fff6f6 !important;
+  border-color: #f16844 !important;
+  background: #fef7f5 !important;
   -webkit-box-shadow: none !important;
   box-shadow: none !important;
-  color: #9f3a38 !important;
+  color: #20273a !important;
 }
 
 .field.error .ui.dropdown .default.text,
