--- a/styles/base.scss
+++ b/styles/base.scss
@@ -1862,7 +1862,8 @@ i.file {
     border-collapse: separate;
     background: transparent !important;
 
-    .customers-warehouses-wrapper & {
+    .customers-warehouses-wrapper &,
+    .my-listings-wrapper & {
       border-spacing: 0 2px !important;
     }
 
@@ -1884,7 +1885,8 @@ i.file {
         display: none !important;
       }
 
-      .customers-warehouses-wrapper & {
+      .customers-warehouses-wrapper &,
+      .my-listings-wrapper & {
 
         tr th {
           box-shadow: 0 0 0 4px #f8f9fb !important;
@@ -2142,9 +2144,11 @@ i.file {
         }
       }
 
-      .customers-warehouses-wrapper & {
+      .customers-warehouses-wrapper &,
+      .my-listings-wrapper & {
 
-        &.root-row td {
+        &.root-row td,
+        &.group-row td {
           height: 18px;
           border-width: 1px 0 !important;
           border-style: solid !important;
@@ -2152,13 +2156,15 @@ i.file {
           background: #fff !important;
           line-height: 18px;
 
-          &:first-child {
+          &:first-child,
+          &.p-0:first-child + td {
             border-left-width: 1px !important;
             border-top-left-radius: 4px;
             border-bottom-left-radius: 4px;
           }
 
-          &:nth-child(2) {
+          &:nth-child(2),
+          &.p-0:first-child ~ td:nth-child(3) {
             padding-left: 15px !important;
           }
 
@@ -2177,13 +2183,15 @@ i.file {
             }
           }
 
-          [class*="RowDropdownIcon"] {
+          [class*="RowDropdownIcon"],
+          [class*="DropdownActions"] > svg {
             margin-top: 1px !important;
             margin-bottom: 1px !important;
           }
         }
 
-        &.nested-row td {
+        &.nested-row td,
+        &[class=""] td {
           position: relative !important;
           overflow: visible !important;
           height: 20px;
@@ -2197,9 +2205,18 @@ i.file {
             max-height: 18px;
           }
 
+          [class*="RowDropdown"].dropdown {
+            margin: 0 !important;
+          }
+
           [class*="RowDropdownIcon"] {
             margin-top: 1px !important;
             margin-bottom: 1px !important;
+          }
+
+          [class*="NetworkDropdown"] {
+            margin-top: -7px !important;
+            margin-bottom: -7px !important;
           }
 
           &:before {
@@ -2269,6 +2286,24 @@ i.file {
             }
           }
 
+          &.p-0:first-child + td {
+            border-left-width: 1px !important;
+            border-top-left-radius: 0;
+            border-bottom-left-radius: 0;
+
+            &:before {
+              left: 15px;
+              border-left: 1px solid #dee2e6;
+              border-top-left-radius: 4px;
+              border-bottom-left-radius: 4px;
+            }
+
+            &:after {
+              left: -1px;
+              border-left: 1px solid #dee2e6 !important;
+            }
+          }
+
           &:nth-child(2) {
 
             &:before {
@@ -2294,6 +2329,105 @@ i.file {
             &:after {
               right: -1px;
               border-right: 1px solid #dee2e6 !important;
+            }
+          }
+        }
+
+        &[class=""] td {
+
+          &.p-0 + td > .cell-wrapper {
+            padding-left: 1.5em;
+          }
+        }
+
+        &[class=""]:last-child > td {
+
+          &:after {
+            top: -4px !important;
+            bottom: -10px !important;
+            height: auto !important;
+            border-bottom: 1px solid #dee2e6;
+          }
+
+          &.p-0 + td:after {
+            border-bottom-left-radius: 4px;
+          }
+
+          &:nth-last-child(2):after {
+            border-bottom-right-radius: 4px;
+          }
+        }
+
+        &.group-row:nth-child(n+2) {
+
+          > td {
+            padding-top: 20px !important;
+
+            &:after {
+              content: "";
+              position: absolute;
+              top: -3px;
+              left: 0;
+              right: 0;
+              height: 10px;
+              border-bottom: 1px solid #dee2e6;
+              background: #fff;
+              box-shadow: 2px 2px 0 0 #f8f9fb, -2px 2px 0 0 #f8f9fb;
+            }
+
+            &:before {
+              content: "";
+              position: absolute;
+              top: 9px;
+              left: 0;
+              right: 0;
+              height: 5px;
+              border-top: 1px solid #dee2e6;
+              background: #fff;
+              box-shadow: 2px -2px 0 0 #f8f9fb, -2px -2px 0 0 #f8f9fb;
+            }
+
+            &.p-0 + td {
+
+              &:before {
+                left: -1px;
+                border-left: 1px solid #dee2e6;
+                border-top-left-radius: 4px;
+              }
+
+              &:after {
+                left: -1px;
+                border-left: 1px solid #dee2e6;
+                border-bottom-left-radius: 4px;
+              }
+            }
+
+            &:nth-last-child(2) {
+
+              &:before {
+                right: -1px;
+                border-right: 1px solid #dee2e6;
+                border-top-right-radius: 4px;
+              }
+
+              &:after {
+                right: -1px;
+                border-right: 1px solid #dee2e6;
+                border-bottom-right-radius: 4px;
+              }
+            }
+          }
+        }
+
+        &.group-row + .group-row {
+
+          > td {
+            padding-top: 10px !important;
+
+            &:before,
+            &:after {
+              content: none !important;
+              display: none !important;
             }
           }
         }
@@ -2356,7 +2490,9 @@ i.file {
         }
 
         &.root-row td,
+        &.group-row td,
         &.nested-row td,
+        &[class=""] td,
         &:not([class]) td {
 
           &.p-0:nth-child(n) {
@@ -2372,18 +2508,23 @@ i.file {
         }
       }
 
-      .customers-warehouses-wrapper.opened-rows & {
+      .customers-warehouses-wrapper.opened-rows &,
+      .my-listings-wrapper.opened-rows & {
 
-        &.root-row td {
+        &.root-row td,
+        &,group-row td {
           background-color: #edeef2 !important;
         }
 
-        &.root-row.opened td {
+        &.root-row.opened td,
+        &,group-row.opened td {
           background-color: #fff !important;
         }
 
         &.root-row td.p-0,
-        &.root-row.opened td.p-0 {
+        &.root-row.opened td.p-0,
+        &,group-row td.p-0,
+        &,group-row.opened td.p-0 {
           background-color: transparent !important;
         }
       }
@@ -3131,7 +3272,8 @@ input[type='number'] {
   }
 }
 
-.tree-wrapper {
+.tree-wrapper,
+.my-listings-wrapper {
   .table-responsive {
     table.table {
       border-spacing: 0;
