--- a/styles/base.scss
+++ b/styles/base.scss
@@ -2558,7 +2558,7 @@ i.file {
 
         &:first-child:last-child td.not-found {
           padding: 55px 10px 28px !important;
-          background: #fff url('/static/not-found.svg') 50% 28px no-repeat !important;
+          background: #fff url('/public/static/not-found.svg') 50% 28px no-repeat !important;
           font-size: 14px;
           font-weight: 400;
           color: #848893 !important;
@@ -2583,7 +2583,7 @@ i.file {
 
         &:first-child:last-child td.not-found {
           padding: 55px 10px 28px !important;
-          background: #fff url('/static/not-found.svg') 50% 28px no-repeat !important;
+          background: #fff url('/public/static/not-found.svg') 50% 28px no-repeat !important;
           font-size: 14px;
           font-weight: 400;
           color: #848893 !important;
