DT-842 Adjusted styles in My Network and Risk Match component.

--- a/styles/base.scss
+++ b/styles/base.scss
@@ -2565,6 +2565,12 @@ i.file {
         }
       }
 
+      .vertically-aligned & {
+        td {
+          vertical-align: middle !important;
+        }
+      }
+
       .notifications-admin-wrapper & {
 
         td {
