DT-1080 Wanted Board Respond Modal fixes

--- a/styles/base.scss
+++ b/styles/base.scss
@@ -378,6 +378,10 @@ a.ui.button {
   width: calc(100% + 2.2857143em);
 }
 
+.modal .table-responsive-wider .table-responsive {
+  overflow-y: hidden;
+}
+
 body > *:not(.modals) .bootstrapiso .table-responsive {
   margin-right: -2.2857143em;
   border: 0 none;
@@ -3014,6 +3018,7 @@ input[type='number'] {
 
               &:nth-child(2) {
                 padding-left: 20px !important;
+                border-right: none;
 
                 &:after {
                   left: -1px;
@@ -3025,6 +3030,7 @@ input[type='number'] {
 
               &:nth-last-child(2) {
                 padding-right: 10px !important;
+                border-left: none;
 
                 &:after {
                   right: -1px;
@@ -3096,6 +3102,16 @@ input[type='number'] {
         }
       }
     }
+  }
+}
+
+.modal .table-responsive table.table thead tr th {
+  background: #fff none;
+}
+
+.modal .table-responsive table.table tbody tr td {
+  &:not(.p-0):before { 
+    background: #fff none;
   }
 }
 
