DT-1301 Updated global datagrid styles to not escape text in a datagrid row.

--- a/styles/base.scss
+++ b/styles/base.scss
@@ -2889,7 +2889,7 @@ input[type='number'] {
         tr {
           td {
             position: relative;
-            overflow: visible;
+            overflow: hidden;
             height: 20px;
             padding: 9px 10px !important;
             box-shadow: 0 6px 0 0 #f8f9fb;
