fix shadowlastline and firefoxscroll

--- a/styles/base.scss
+++ b/styles/base.scss
@@ -378,9 +378,9 @@ a.ui.button {
   width: calc(100% + 2.2857143em);
 }
 
-.modal .table-responsive-wider .table-responsive {
-  overflow-y: hidden;
-}
+// .modal .table-responsive-wider .table-responsive {
+//   overflow-y: hidden;
+// }
 
 body > *:not(.modals) .bootstrapiso .table-responsive {
   margin-right: -2.2857143em;
@@ -2780,6 +2780,7 @@ i.file {
 
 .modal .table-responsive table.table tr td.p-0 {
   background: #fff !important;
+  box-shadow: none;
 }
 
 .ui.fluid.container > .left.collapsed ~ div {
