--- a/styles/base.scss
+++ b/styles/base.scss
@@ -2890,7 +2890,7 @@ input[type='number'] {
         tr {
           td {
             position: relative;
-            overflow: hidden;
+            overflow: visible;
             height: 20px;
             padding: 9px 10px !important;
             box-shadow: 0 6px 0 0 #f8f9fb;
