--- a/styles/base.scss
+++ b/styles/base.scss
@@ -1505,7 +1505,7 @@ i.file {
   &.related {
     position: relative;
     width: 22px;
-    height: 10px;
+    height: 24px;
     margin: 0;
     border-radius: 0;
 
@@ -3176,6 +3176,21 @@ input[type='number'] {
               display: block;
               width: 100%;
               text-overflow: ellipsis;
+            }
+
+            .ui.button i.icon {
+              margin-left: 0 !important;
+            }
+
+            i.file {
+              
+              &.unknown,
+              &.positive,
+              &.negative,
+              &.non-related,
+              &.related {
+                vertical-align: top;
+              }
             }
           }
         }
